[project]
name = "single_instagram_post_creator"
version = "0.1.0"
description = "single_instagram_post_creator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
]

[project.scripts]
single_instagram_post_creator = "single_instagram_post_creator.main:run"
run_crew = "single_instagram_post_creator.main:run"
train = "single_instagram_post_creator.main:train"
replay = "single_instagram_post_creator.main:replay"
test = "single_instagram_post_creator.main:test"
run_with_trigger = "single_instagram_post_creator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
